--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Petopia</title>
 	<link rel="stylesheet" type="text/css" href="estilos.css"/>
+	<link rel="stylesheet" type="text/css" href="estilos2.css"/>
 </head>
 <body>
 	<main>
