--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             </div>
             <div class="product-card-2">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-2@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+              <div class="product-descricao">
+                <div class="text-wrapp-3">Garrafa de Água Portátil</div>
+                <div class="text-wrapp-4">R$17.810,94</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
             <div class="product-card-3">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-3@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+              <div class="product-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$8.396,80</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$3.307,80</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-4">R$3.307,80</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
@@ -66,13 +66,13 @@
             </div>
             <div class="product-card-6">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$8.396,80</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
-            <div class="button-wrapper"><button class="button-2">Ver mais</button></div>
+            <div class="button-wrapp"><button class="bt-2">Ver mais</button></div>
           </div>
           <div class="brands-logo">
             <img class="flutterwave-png" src="https://c.animaapp.com/f11aBe7U/img/flutterwave---png-0@2x.png" />
