--- a/index.html
+++ b/index.html
@@ -97,48 +97,48 @@
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-7@2x.png" />
               <div class="product-description">
-                <div class="text-wrapper-3">Coleira Para Cães</div>
-                <div class="text-wrapper-4">R$971,26</div>
+                <div class="text-wrapp-3">Coleira Para Cães</div>
+                <div class="text-wrapp-4">R$971,26</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
             </div>
             <div class="product-card-2">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-8@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Alimentos Para Pet</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Alimentos Para Pet</div>
+                <div class="text-wrapp-4">R$17.810,94</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
             <div class="product-card-3">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-9@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Fórmula Inteligente</div>
-                <div class="text-wrapper-4">R$8.396,8</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Fórmula Inteligente</div>
+                <div class="text-wrapp-4">R$8.396,8</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$3.307,80</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-4">R$3.307,80</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
             <div class="product-card-5">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-11@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Garrafa de Água Portátil</div>
+                <div class="text-wrapp-4">R$17.810,94</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-11.svg" />
               </div>
             </div>
             <div class="product-card-6">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$8.396,80</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
