atualização de preços

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-1@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$3.307,80</div>
+                <div class="text-wrapper-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
             </div>
@@ -36,7 +36,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-2@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+                <div class="text-wrapper-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
@@ -44,7 +44,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-3@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+                <div class="text-wrapper-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
@@ -52,7 +52,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$3.307,80</div>
+                <div class="text-wrapper-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
@@ -60,7 +60,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-11@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+                <div class="text-wrapper-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-11.svg" />
               </div>
             </div>
@@ -68,7 +68,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+                <div class="text-wrapper-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
@@ -98,15 +98,15 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-7@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Coleira Para Cães</div>
-                <div class="text-wrapper-4">R$971,26</div>
+                <div class="text-wrapper-4">R$49,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
             </div>
             <div class="product-card-2">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-8@2x.png" />
               <div class="product-description">
-                <div class="text-wrapper-3">Alimentos Para Pet</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+                <div class="text-wrapper-3">Alimentos Para Pet Kg</div>
+                <div class="text-wrapper-4">R$44,99</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
@@ -114,7 +114,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-9@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Fórmula Inteligente</div>
-                <div class="text-wrapper-4">R$8.396,8</div>
+                <div class="text-wrapper-4">R$149,99</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
@@ -122,7 +122,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$3.307,80</div>
+                <div class="text-wrapper-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
@@ -130,7 +130,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-11@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$17.810,94</div>
+                <div class="text-wrapper-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-11.svg" />
               </div>
             </div>
@@ -138,7 +138,7 @@
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
               <div class="product-description">
                 <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$8.396,80</div>
+                <div class="text-wrapper-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
