alterações nomes das classes

--- a/index.html
+++ b/index.html
@@ -74,29 +74,29 @@
             </div>
             <div class="button-wrapp"><button class="bt-2">Ver mais</button></div>
           </div>
-          <div class="brands-logo">
+          <div class="logomarca">
             <img class="flutterwave-png" src="https://c.animaapp.com/f11aBe7U/img/flutterwave---png-0@2x.png" />
             <img class="petsmart-png" src="https://c.animaapp.com/f11aBe7U/img/petsmart---png-0@2x.png" />
             <img class="paypal-png" src="https://c.animaapp.com/f11aBe7U/img/paypal---png-0@2x.png" />
             <img class="logo-unipe-desktop" src="https://c.animaapp.com/f11aBe7U/img/logo-unipe-desktop-pos-1@2x.png" />
           </div>
         </div>
-        <div class="overlap-group">
+        <div class="sobreposicao-group">
           <div class="group">
-            <div class="overlap-group-2">
-              <p class="get-updated-with">
+            <div class="sobreposicao-group-2">
+              <p class="atualizacao">
                 Fique atualizado com dicas sobre como tratar bem seus animais de estimação e<br/> produtos mais recentes adequados para seus animais de estimação
               </p>
-              <div class="text-wrapper-5">Assine a nossa Newsletter</div>
-              <button class="div-wrapper"><button class="button">Inscreva-se</button></button>
-              <div class="search-hero-section-2"><div class="text-wrapper-6">Digite seu e-mail</div></div>
+              <div class="text-wrapp-5">Assine a nossa Newsletter</div>
+              <button class="div-wrapp"><button class="bt">Inscreva-se</button></button>
+              <div class="search-section-2"><div class="text-wrapp-6">Digite seu e-mail</div></div>
             </div>
           </div>
-          <div class="latest-products">
-            <div class="text-wrapper-7">Últimos Produtos</div>
+          <div class="ultimos-produtos">
+            <div class="text-wrapp-7">Últimos Produtos</div>
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-7@2x.png" />
-              <div class="product-description">
+              <div class="product-descricao">
                 <div class="text-wrapp-3">Coleira Para Cães</div>
                 <div class="text-wrapp-4">R$971,26</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
@@ -142,11 +142,11 @@
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
-        	<div class="buttons-2"><button class="button-2">Ver mais</button></div>
+        	<div class="bts-2"><button class="bt-2">Ver mais</button></div>
           </div>
           <div class="ellipse"></div>
           <div class="frame-2">
-            <img class="discount-pana" src="https://c.animaapp.com/f11aBe7U/img/discount-pana-1.svg" />
+            <img class="discount" src="https://c.animaapp.com/f11aBe7U/img/discount-pana-1.svg" />
             <div class="overlap-2">
               <div class="text-wrapper-8">Especial</div>
               <div class="text-wrapper-9">OFERECER VENDA</div>
