alteração das classes dos produtos

--- a/index.html
+++ b/index.html
@@ -23,52 +23,52 @@
           <div class="buttons"><button class="button">Compre Agora</button></div>
           <div class="search-hero-section"><div class="text-wrapper">Pesquisar</div></div>
           <div class="featured-products">
-            <div class="text-wrapper-2">Produtos Em Destaque</div>
+            <div class="text-wrapp-2">Produtos Em Destaque</div>
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-1@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$1.499,00</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
             </div>
             <div class="product-card-2">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-2@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$69,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Garrafa de Água Portátil</div>
+                <div class="text-wrapp-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
             <div class="product-card-3">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-3@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$59,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$1.499,00</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
             <div class="product-card-5">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-11@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$69,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Garrafa de Água Portátil</div>
+                <div class="text-wrapp-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-11.svg" />
               </div>
             </div>
             <div class="product-card-6">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$59,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
@@ -96,53 +96,53 @@
             <div class="text-wrapper-7">Últimos Produtos</div>
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-7@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Coleira Para Cães</div>
-                <div class="text-wrapper-4">R$49,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Coleira Para Cães</div>
+                <div class="text-wrapp-4">R$49,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
             </div>
             <div class="product-card-2">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-8@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Alimentos Para Pet Kg</div>
-                <div class="text-wrapper-4">R$44,99</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Alimentos Para Pet Kg</div>
+                <div class="text-wrapp-4">R$44,99</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-8.svg" />
               </div>
             </div>
             <div class="product-card-3">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-9@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Fórmula Inteligente</div>
-                <div class="text-wrapper-4">R$149,99</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Fórmula Inteligente</div>
+                <div class="text-wrapp-4">R$149,99</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
             </div>
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Dog Rolling Stone</div>
-                <div class="text-wrapper-4">R$1.499,00</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
             </div>
             <div class="product-card-5">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-11@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Garrafa de Água Portátil</div>
-                <div class="text-wrapper-4">R$69,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Garrafa de Água Portátil</div>
+                <div class="text-wrapp-4">R$69,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-11.svg" />
               </div>
             </div>
             <div class="product-card-6">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
-              <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
-                <div class="text-wrapper-4">R$59,90</div>
+              <div class="produto-descricao">
+                <div class="text-wrapp-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapp-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
             </div>
-        	<div class="buttons-2"><button class="button-2">Ver mais</button></div>
+        	<div class="bt-2"><button class="bt-2">Ver mais</button></div>
           </div>
           <div class="ellipse"></div>
           <div class="frame-2">
