--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
           <div class="frame-2">
             <img class="discount" src="https://c.animaapp.com/f11aBe7U/img/discount-pana-1.svg" />
             <div class="overlap-2">
-              <div class="text-wrapper-8">Especial</div>
-              <div class="text-wrapper-9">OFERECER VENDA</div>
+              <div class="text-wrapp-8">Especial</div>
+              <div class="text-wrapp-9">OFERECER VENDA</div>
               <p class="p">Ganhe até 25% de desconto na compra de mais de 2 produtos</p>
             </div>
-            <div class="buttons-3"><button class="button-3">Obter Desconto</button></div>
+            <div class="bt-3"><button class="bt-3">Obter Desconto</button></div>
           </div>
-          <div class="footer-section">
-            <div class="footer-about">
+          <div class="footer-secao">
+            <div class="footer-sobre">
               <div class="logo">
 				<div class="frame-3">
 					<div class="logo-2">
