--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <div class="logo">
 				<div class="frame-3">
 					<div class="logo-2">
-						<img class="ri-bear-smile-fill" src="https://c.animaapp.com/f11aBe7U/img/ri-bear-smile-fill.svg" />
+						<img class="ri-urso-sorriso-preencher" src="https://c.animaapp.com/f11aBe7U/img/ri-bear-smile-fill.svg" />
 						<p class="PETOPIA"><span class="span">PET</span> <span class="text-wrapper-10">OPIA</span></p>
 					</div>
 					<div class="frame-4">
@@ -175,23 +175,23 @@
                 	Projeto Universitário que Consiste no Densevolvimento de um Web Site, cujo nome é Petopia, cuja Funcionalidade é a Simulação de uma Organização que Promove Adoção de Animais.
                </p>
             </div>
-            <div class="footer-about-2">
+            <div class="footer-sobre-2">
               <div class="text-wrapper-15">Links Rápidos</div>
-              <div class="home-featured-about">Home<br/> Sobre <br/> Blogs <br/> Contato </div>
+              <div class="highligh-for-the-home">Home<br/> Sobre <br/> Blogs <br/> Contato </div>
             </div>
-            <div class="footer-about-3">
+            <div class="footer-sobre-3">
               <div class="text-wrapper-15">Onde estamos?</div>
               <div class="frame-6"></div>
             </div>
           </div>
         </div>
-        <img class="social-icons" src="https://c.animaapp.com/f11aBe7U/img/social-icons.svg" />
+        <img class="ícones-sociais" src="https://c.animaapp.com/f11aBe7U/img/ico.svg" />
         <p class="text-wrapper-16">©  2024 - PetOpia</p>
         <div class="rectangle-3"></div>
         <div class="top-navigation-bar">
           <div class="frame-3">
             <div class="logo-2">
-              <img class="ri-bear-smile-fill" src="https://c.animaapp.com/f11aBe7U/img/ri-bear-smile-fill-1.svg" />
+              <img class="ri-urso-sorriso-preencher" src="https://c.animaapp.com/f11aBe7U/img/ri-bear-smile-fill-1.svg" />
               <p class="PETOPIA"><span class="span">PET</span> <span class="text-wrapper-10">OPIA</span></p>
             </div>
             <div class="frame-4">
