--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img class="vector" src="https://c.animaapp.com/f11aBe7U/img/vector.svg" />
           <img class="img" src="https://c.animaapp.com/f11aBe7U/img/vector-1.svg" />
           <img class="vector-2" src="https://c.animaapp.com/f11aBe7U/img/vector-2.svg" />
-          <img cla s="rectangle" src="https://c.animaapp.com/f11aBe7U/img/rectangle-1.png" />
+          <img class="rectangle" src="https://c.animaapp.com/f11aBe7U/img/rectangle-1.png" />
           <div class="frame">
             <p class="vamos-ajudar-a">Vamos ajudar a adotar o seu <br />Animal de estimação.</p>
             <p class="compre-os-melhores">
@@ -148,8 +148,8 @@
           <div class="frame-2">
             <img class="discount-pana" src="https://c.animaapp.com/f11aBe7U/img/discount-pana-1.svg" />
             <div class="overlap-2">
-              <div class="text-wrapper-8">Especial</div>
-              <div class="text-wrapper-9">OFERECER VENDA</div>
+              <div class="text-wrapper-8">Oferta</div>
+              <div class="text-wrapper-9">Especial</div>
               <p class="p">Ganhe até 25% de desconto na compra de mais de 2 produtos</p>
             </div>
             <div class="buttons-3"><button class="button-3">Obter Desconto</button></div>
