--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-1@2x.png" />
               <div class="produto-descricao">
-                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-3">Ração Programada</div>
                 <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-7.svg" />
               </div>
@@ -51,7 +51,7 @@
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
               <div class="produto-descricao">
-                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-3">Ração Programada</div>
                 <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
@@ -121,7 +121,7 @@
             <div class="product-card-4">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-10@2x.png" />
               <div class="produto-descricao">
-                <div class="text-wrapp-3">Dog Rolling Stone</div>
+                <div class="text-wrapp-3">Ração Programada</div>
                 <div class="text-wrapp-4">R$1.499,00</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-10.svg" />
               </div>
