criação de hiperlinks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="pet-marketplace">
-      <div class="div">
+      <div class="div" id="inicio">
         <div class="overlap">
           <img class="vector" src="https://c.animaapp.com/f11aBe7U/img/vector.svg" />
           <img class="img" src="https://c.animaapp.com/f11aBe7U/img/vector-1.svg" />
@@ -23,7 +23,7 @@
           <div class="buttons"><button class="button">Compre Agora</button></div>
           <div class="search-hero-section"><div class="text-wrapper">Pesquisar</div></div>
           <div class="featured-products">
-            <div class="text-wrapp-2">Produtos Em Destaque</div>
+            <div class="text-wrapp-2" id="categorias">Produtos Em Destaque</div>
             <div class="product-card">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-1@2x.png" />
               <div class="produto-descricao">
@@ -87,7 +87,7 @@
               <p class="get-updated-with">
                 Fique atualizado com dicas sobre como tratar bem seus animais de estimação e<br/> produtos mais recentes adequados para seus animais de estimação
               </p>
-              <div class="text-wrapper-5">Assine a nossa Newsletter</div>
+              <div class="text-wrapper-5" id="contato">Assine a nossa Newsletter</div>
               <button class="div-wrapper"><button class="button">Inscreva-se</button></button>
               <div class="search-hero-section-2"><div class="text-wrapper-6">Digite seu e-mail</div></div>
             </div>
@@ -163,14 +163,14 @@
 						<p class="PETOPIA"><span class="span">PET</span> <span class="text-wrapper-10">OPIA</span></p>
 					</div>
 					<div class="frame-4">
-						<div class="frame-5"><div class="text-wrapper-11">Home</div></div>
-						<div class="frame-5"><div class="text-wrapper-12">Categorias</div></div>
-						<div class="frame-5"><div class="text-wrapper-12">Sobre</div></div>
-						<div class="frame-5"><div class="text-wrapper-12">Contato</div></div>
+						<div class="frame-5"><div class="text-wrapper-11"><a href="#inicio">Home</a></div></div>
+						<div class="frame-5"><div class="text-wrapper-12"><a href="#categorias">Categorias</a></div></div>
+						<div class="frame-5"><div class="text-wrapper-12"><a href="#sobre">Sobre</a></div></div>
+						<div class="frame-5"><div class="text-wrapper-12"><a href="#contato">Contato</a></div></div>
 					</div>
 				</div>
               </div>
-              <div class="text-wrapper-13">About</div>
+              <div class="text-wrapper-13" id="sobre">About</div>
               <p class="text-wrapper-14">
                 	Projeto Universitário que Consiste no Densevolvimento de um Web Site, cujo nome é Petopia, cuja Funcionalidade é a Simulação de uma Organização que Promove Adoção de Animais.
                </p>
