--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</div>
 				</div>
               </div>
-              <div class="text-wrapper-13">About</div>
+              <div class="text-wrapper-13">Sobre</div>
               <p class="text-wrapper-14">
                 	Projeto Universitário que Consiste no Densevolvimento de um Web Site, cujo nome é Petopia, cuja Funcionalidade é a Simulação de uma Organização que Promove Adoção de Animais.
                </p>
