--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 Fique atualizado com dicas sobre como tratar bem seus animais de estimação e<br/> produtos mais recentes adequados para seus animais de estimação
               </p>
               <div class="text-wrapper-5">Assine a nossa Newsletter</div>
-              <button class="div-wrapper"><button class="button">Inscreva-se</button></button>
+              <button class="div-wrapper"><button class="div-wrapper">Inscreva-se</button></button>
               <div class="search-hero-section-2"><div class="text-wrapper-6">Digite seu e-mail</div></div>
             </div>
           </div>
@@ -200,10 +200,6 @@
               <div class="frame-5"><div class="text-wrapper-12">Sobre</div></div>
               <div class="frame-5"><div class="text-wrapper-12">Contato</div></div>
             </div>
-          </div>
-          <div class="frame-7">
-            <button class="buttons-4"><button class="button-4">Cadastre-se</button></button>
-            <button class="buttons-5"><button class="button-5">Login</button></button>
           </div>
         </div>
       </div>
