--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="product-card-3">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-3@2x.png" />
               <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapper-3">Tapete Para Cães</div>
                 <div class="text-wrapper-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-9.svg" />
               </div>
@@ -67,7 +67,7 @@
             <div class="product-card-6">
               <img class="rectangle-2" src="https://c.animaapp.com/f11aBe7U/img/rectangle-3-12@2x.png" />
               <div class="product-description">
-                <div class="text-wrapper-3">Tapete de Resfriamento Para Cães</div>
+                <div class="text-wrapper-3">Tapete Para Cães</div>
                 <div class="text-wrapper-4">R$59,90</div>
                 <img class="component" src="https://c.animaapp.com/f11aBe7U/img/component-1-12.svg" />
               </div>
